--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   </script>
 </head>
 <body>
-  <h1>Đang tải video, vui lòng chờ...</h1>
-  <div class="countdown">Chuyển hướng sau <span id="timer">4</span> giây...</div>
+  <h1>Loading Vieo, please wait...</h1>
+  <div class="countdown"> <span id="timer">4</span> seconds...</div>
 </body>
 </html>
