--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     body {
       margin: 0;
       padding: 0;
-      background: url('background.jpg') no-repeat center center;
+      background: url('jgkhajsghjawtkp.mp4') no-repeat center center;
       background-size: cover;
       font-family: Arial, sans-serif;
       display: flex;
